--- a/CODE/dashboard.css
+++ b/CODE/dashboard.css
@@ -5,14 +5,14 @@
     font-family: 'Geist', sans-serif;
 }
 body{
+    border-collapse: collapse;
     background-color: #FAFAFA;
-    width: 100%;
     height: 1024px;
     left: 1750px;
 
 }
 .container{
-    width: 100%;
+    width: 1500px;
     height: 68px;
     border-bottom: 1px #F4F4F2;
     justify-content: space-between;
@@ -20,7 +20,7 @@ body{
     background-color: #FFFFFF;
     display: flex;
 }
-th{
+/* th{
     font-size: 12px;
     color: #121212;
     border: #FFFFFF;
@@ -29,7 +29,7 @@ th{
     line-height: 16px;
     letter-spacing: 0px;
 
-}
+} */
 .heading{
     width: 189px;
     height: 30px;
@@ -61,7 +61,8 @@ th{
     /* font-size: 16px;  */
 }
 .section{
-    width: 100%;
+    width: 1392px;
+    min-width: 1490px;
     height: 1232px;
     top: 68px;
     padding: 32px 24px 0px 24px ;
@@ -76,7 +77,7 @@ th{
 
 }
 .head{
-    width: 1392px;
+    max-width: 100%;
     height: 76px;
     justify-content: space-between;
     padding: 16px;
@@ -84,7 +85,7 @@ th{
     /* justify-content: flex-start; */
     align-items: center;
     display: flex;
-    border-top-left-radius: 15px ;
+    border-radius: 15px ;
 }
 .label{
     width: 478px;
@@ -97,6 +98,7 @@ th{
 }
 table{
     width: 100%;
+    min-width: 900px;
     border-collapse: collapse;
 }
 th{
@@ -105,6 +107,10 @@ th{
     background-color: #F6F6F4;
     font-weight: 600;
     border-bottom: 1px solid #F4F4F2;
+    font-size: 12px;
+    line-height: 16px;
+    color: #121212;
+
 }
 #addtask{
     background-color: #007AFF;
@@ -118,7 +124,7 @@ th{
     padding-bottom: 12px;
     padding-left: 16px;
     gap: 8px;
-    margin-right: -20px;
+    margin-left: -25px;
     color: #FFFFFF;
     
 }
@@ -285,7 +291,7 @@ input:focus{
     border: solid #1E90FF;
 }
 #addtaskBtn{
-    float: right;
+    /* float: right; */
     background-color: #007AFF;
     width: 100px;
     height: 48px;
@@ -296,7 +302,60 @@ input:focus{
     gap: 8px;   
     border-radius: 12px;
     border: #FFFFFF;
+
 }
 #addtaskBtn:hover{
     background-color: #407dbf;
 }
+#custom-select{
+    width: 16px;
+    height: 16px;
+    background-color: #F6F6F4;
+    border: none;
+    outline: none;
+}
+
+
+#word{
+    display: inline;
+    color: #65605C;
+    width: 43px;
+    height: 20px;
+    font-family: 'geist';
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 20px;
+    float: left;
+}
+#active{
+    width: 91px;
+    height: 32px;
+    background-color: #F6F6F4;
+    border: 1px solid #E7E7E4;
+    padding: 6px 10px 6px 14px;
+    border-radius: 4px;
+    gap: 8px;
+    margin-top: 10px;
+    margin-left: 1120%;
+}
+/* tbody{
+    width: 200vw;
+    border-collapse: collapse;
+} */
+
+/* appearance: none; 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-color: #F6F6F4;
+    border: 1px solid #E7E7E4;
+    padding: 6px 10px 6px 14px; /* Add space for the arrow */
+    /* width: 91px;
+    height: 32px;
+    gap: 8px;
+    background-image: url('data:image/svg+xml;utf8,<svg fill="%23000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    font-size: 16px;
+    background-size: 16px;
+    border-radius: 4px;
+    cursor: pointer; */ 
